[gd_scene load_steps=2 format=2]

[ext_resource path="res://ChatBox.gd" type="Script" id=1]

[node name="ChatBox" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 25.0
margin_top = 394.0
margin_right = 995.0
margin_bottom = 569.0
color = Color( 0.184314, 0.0823529, 0.0823529, 1 )

[node name="ChatText" type="Label" parent="."]
margin_left = 53.0
margin_top = 404.0
margin_right = 976.0
margin_bottom = 521.0
autowrap = true

[node name="Back" type="Button" parent="."]
margin_left = 34.0
margin_top = 529.0
margin_right = 133.0
margin_bottom = 560.0
text = "Anterior"

[node name="Next" type="Button" parent="."]
margin_left = 879.0
margin_top = 526.0
margin_right = 986.0
margin_bottom = 561.0
text = "Pr√≥ximo"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="Time_to_write"]
